# offset-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: debian.yml  python-linux.yml  ubuntu.yml
src/: offset_yara.py
src/common/: blockline.py  mytypes.py  version.py
src/offset_tools/: offset_dump.py  offset_yara.py
src/offset_tools/common/: blockline.py  version.py
test/: cirros-0.6.3-x86_64.qcow2  strings-dec-ascii-all_qcow.txt.zst  strings-dec-ascii-all_qcow_partial.txt  strings-dec-ascii-all_yes.txt  strings-hex-ascii-all_qcow.txt.zst  strings-hex-ascii-all_qcow_partial.txt  strings-hex-ascii-all_yes.txt  test.yar  test_lib.py  yara-out_qcow.txt  yara-out_yes.txt  yes.txt
